fix overflow on portfolio tiles for smaller screens

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -10135,6 +10135,8 @@ section.resume-section .resume-section-content {
   }
 }
 
+/*PORTFOLIO*/
+
 #portfolio .container-fluid, #portfolio .container-sm, #portfolio .container-md, #portfolio .container-lg, #portfolio .container-xl {
     max-width: 1920px;
   }
@@ -10158,18 +10160,65 @@ section.resume-section .resume-section-content {
     transition: opacity 0.25s ease;
     text-align: center;
   }
-  #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category {
-    font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 0.85rem;
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-  #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-name {
-    font-size: 1.2rem;
-  }
   #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption {
     opacity: 1;
   }
+
+  .project-category {
+      font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      font-size: 0.85rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 1rem;
+  }
+
+  .project-name {
+      margin: 0 0.5rem 1rem 0.5rem;
+      font-size: 1.2rem;
+  }
+
+/*Portfolio media rules */
+@media (max-width: 1100px) {
+    .project-category {
+        font-size: 0.85rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .project-name {
+        margin: 0 0.5rem 0.5rem 0.5rem;
+        font-size: 1.2rem;
+    }
+}
+@media (max-width: 991px) {
+    .project-category {
+        font-size: 0.85rem;
+        margin-bottom: 1rem;
+    }
+
+    .project-name {
+        margin: 0 0.5rem 1rem 0.5rem;
+        font-size: 1.2rem;
+    }
+}
+@media (max-width: 400px) {
+    .project-name {
+        line-height: 1.5rem;
+        margin: 0 0.5rem 0.8rem;
+        font-size: 1.2rem;
+    }
+
+    .project-category {
+        margin-bottom: 0.5rem;
+        font-size: 0.8rem;
+    }
+
+    .project-access-link {
+        font-size: 0.85rem;
+        margin: 0;
+    }
+}
+
+/*TECHNO-WATCH*/
 
 .technology-watch {
     display: flex;
@@ -10218,6 +10267,7 @@ section.resume-section .resume-section-content {
     color: #99BABE !important;
 }
 
+/*Techno watch media rules*/
 @media (max-width: 1031px) {
     .technology-watch-section > input + * {
         height: 830px;
